# quanteda

./:   API_notes.md  .Rbuildignore  .Rhistory  .directory  .gitattributes  .gitignore  .lintr  .travis.yml  22ndMay.RData  AGENTS.md  API.md  CLAUDE.md  CONDUCT.md  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  KEN TEST FILE TO DELETE.R  NAMESPACE  NAMESPACE~  NEWS  NEWS-v2.md  NEWS.md  NOTES.md  QUANTEDA.Rproj  QUANTEDA_0.11.R  QUANTEDA_PROJECT_NOTES.txt  README-API_changes.md  README.Rmd  README.html  README.md  README.md.orig  Rprof.out  _pkgdown.yml  appveyor.yml  cleanup  codecov.yml  configure  configure.ac  conflict_test.R  conflict_test.R.BASE.12525.R  (+17 more)
..Rcheck/: 00install.out  quanteda-Ex.R  quanteda-Ex.Rout
QUANTEDA/: DESCRIPTION  Read-and-delete-me
R/: MODIFY THIS AND COMMIT AS A TEST.txt  RcppExports.R  View.R  aaa.R  bigrams.R  bigrams.R~  bootstrap_dfm.R  cache.R  casechange-functions.R  cfm.R  cfm3.R  cfm4.R  char_select.R  character-methods.R  classification.R  classifiers.R  clean.R  cloud.R  collocates.R  collocations.R  collocations2.R  contexts.R  convert.R  converters.R  copy.R  corpus-addsummary-metadata.R  corpus-deprecated.R  corpus-methods-base.R  corpus-methods-quanteda.R  corpus-methods-tm.R  corpus-methods.R  corpus-sources-S4.R  corpus-sources.R  corpus.R  corpus.add.attributes.R  corpus.append.R  corpus.create.R  corpus.reshape.R  corpus.subset.inner.R  corpus2-methods.R  (+288 more)
R_NEEDFIXING/: PN_dfm_tests.R  classification-unused.R  classification.R  classifiers_pn.R  collocations-Testing.R  collocations-Testing.do  collocations3.R  defunct_collocations.R  dfm_data.table.R  features.R  install-tools.R  misc_tests.R  twitter.R
Rr/: bootstrap_dfm.R  corpus-methods-tm.R  corpus_trim.R  defunct-functions.R  dfm_compress.R  dfm_replace.R  dfm_sort.R  dfm_subset.R  dfm_weight.R  docvars.R  fcm-classes.R  nfunctions.R  nscrabble.R  phrases.R  quanteda-documentation.R  readtext-methods.R  textmodel_nb.R  textmodel_wordscores.R  textplot_influence.R  textplot_network.R  textplot_xray.R  textstat-methods.R  textstat_collocations.R  textstat_simil.R  tokens_group.R  tokens_ngrams.R
amicus/: text_files_legend.xls
benchmarks/: benchmark_dfm.html  equal.R  equal.cpp  list.cpp  unorderedset.R
budget_2010/: 2010_BUDGET_04_Arthur_Morgan_SF.txt  2010_BUDGET_07_Kieran_ODonnell_FG.txt  2010_BUDGET_08_Eamon_Gilmore_LAB.txt  2010_BUDGET_09_Michael_Higgins_LAB.txt  2010_BUDGET_10_Ruairi_Quinn_LAB.txt  2010_BUDGET_11_John_Gormley_Green.txt  2010_BUDGET_12_Eamon_Ryan_Green.txt
construction/: dfm_sparse.R  makeData.R
css/: base.css
data/: LBGexample.RData  UKManifestos.RData  amicusCorpus.RData  amicusTexts.RData  custom_stopwords.RData  data_breakrules.rda  data_breakrules_sentence.rda  data_breakrules_word.rda  data_char_encodedtexts.RData  data_char_inaugural.RData  data_char_mobydick.RData  data_char_sampletext.RData  data_char_sampletext.rda  data_char_stopwords.RData  data_char_stopwords.rda  data_char_ukimmig2010.RData  data_char_ukimmig2010.rda  data_char_wordlists.RData  data_char_wordlists.rda  data_corpus_dailnoconf1991.rda  data_corpus_inaugural.RData  data_corpus_inaugural.rda  data_corpus_irishbudget2010.RData  data_corpus_irishbudget2010.rda  data_dfm_LBGexample.RData  data_dfm_LBGexample.rda  data_dfm_lbgexample.rda  data_dictionary_LSD2015.rda  data_int_syllables.RData  data_int_syllables.rda  encodedTexts.RData  englishSyllables.RData  exampleString.RData  globals.RData  ie2010Corpus.RData  ieTexts.RData  inaugCorpus.RData  inaugTexts.RData  lbg.Rdata  mobydickText.RData  (+9 more)
demo/: 00Index  00index  quanteda.R  twitter.R
docs/: 404.html  CLAUDE.html  CNAME  CONDUCT.html  CONDUCT.md  LICENSE-text.html  authors.html  authors.md  cn.css  docsearch.json  extra.css  extra.js  index.html  index.md  ja.css  llms.txt  pkgdown.yml  search.json  sitemap.xml
examples/: LaverGarry.cat  LoughranMcDonald.cat  amiciExample.R  benchmark.R  benchmark.R.orig  bigramExample.R  corpusFromFolders.R  countSyllablesExample.R  dfmExample.R  dictExample.R  fileHeaderExample.R  fromFilenameExample.R  immigrationExample.R  kwicExample.R  make_iebudget_corpus.R  quantedaExample.R  readTmExample.R  stopwordsExample.R  testAmici.R  testDfm.R  testKwic.R  testMovieReviews.R  testQuanteda.R  testSentenceSeg.R  testStopwords.R  testUkSupremes.R  testWeka.R  test_new_dfm.R  topicModelTesting.R  twitterExample.R  twitterHandshakeExample.R  useCase1.R  wstat-dict-example.R  wstatDictExample.R
images/: .directory
include/: recompile.h
inst/: CITATION  CITATION.R  WORDLIST  libtbb.R
kohei/: kohei_collocation2.R  kohei_collocation3.R  kohei_lemma.R  kohei_tfmx.R
man/: .gitignore  LBGexample.Rd  MCMCirtPoisson1d.Rd  SOTUCorpus.Rd  UKManifestos.Rd  View.Rd  addAttributes.Rd  addCorpusAttributes.Rd  affinity.Rd  amicusCorpus.Rd  amicusTexts.Rd  append.corpus.Rd  appendCorpus.Rd  applyDictionary.Rd  applyDictionary2.Rd  apply_if.Rd  as.Matrix.Rd  as.character.corpus.Rd  as.coef.textmodel.Rd  as.coefficients_textmodel.Rd  as.corpus.Rd  as.corpus.corpuszip.Rd  as.data.frame-dfm-method.Rd  as.data.frame.dfm.Rd  as.dfm.Rd  as.dictionary.Rd  as.dist.dist.Rd  as.fcm.Rd  as.igraph.Rd  as.keras.Rd  as.list.dist.Rd  as.list.dist.selection.Rd  as.list.dist_selection.Rd  as.matrix.dfm.Rd  as.matrix.dist_selection.Rd  as.matrix.simil.Rd  as.matrix.textstat_simil_sparse.Rd  as.network.Rd  as.statistics_textmodel.Rd  as.summary.textmodel.Rd  (+552 more)
markdownDocs/: Documentation.Rmd
misc/: ProQuest Corpus Demo 30.csv  arabic-stemmer.R  arabicsample.txt  profilingTests.R  ridgeRegressionTests.R  runProfiler.R  sparse-dfm-tests.R  stukaltexts.R  test.txt
paper/: paper.bib  paper.md
pkgdown/: extra.css
revdep/: README.html  README.md  checks.rds  cran.md  data.sqlite  failures.md  problems.html  problems.md
rules/: cusotm.yml  custom.yml  download.R  update.R
src/: Makevars  Makevars.in  Makevars.win  ManhattanParallel_qatd.cpp  RcppExports.cpp  armadillo.h  ca.cpp  ca_mt.cpp  clean.cpp  cleanBoostCpp.cpp  collocations_mt.cpp  collocations_mt_.cpp  collocations_mt_dev.cpp  dev.h  dfm.cpp  fcm.cpp  (+92 more)
(+2169 files in other folders)
